objects/LLC_BI__Risk_Grade_Factor_Value__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Annual_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Annual Review</label>
        <referenceTo>LLC_BI__Annual_Review__c</referenceTo>
        <relationshipLabel>Risk Grade Factor Values</relationshipLabel>
        <relationshipName>Risk_Grade_Factor_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__QualVal__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>-D Qualitative Value</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Qualitative_Value__c</fullName>
        <description>This field is optional. It is populated automatically whenever a qualitative value is entered for the parent risk grade factor in a risk grade worksheet.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Qualitative Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__QuantVal__c</fullName>
        <label>-D Quantitative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Quantitative_Value__c</fullName>
        <description>This field is optional. It is populated automatically whenever a quantitative value is entered for the parent risk grade factor in a risk grade worksheet.</description>
        <label>Quantitative Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Factor_Name__c</fullName>
        <description>This field is required. It is populated automatically when the record is created by user input on the worksheet. This field is a lookup relationship to the relevant risk grade factor and should not be altered.</description>
        <formula>LLC_BI__Risk_Grade_Factor__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Grade Factor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Factor__c</fullName>
        <description>This field is required. It is only populated automatically when the user selects or enters a value for the risk grade factor in a risk grade worksheet..  This field specifies the risk grade factor associated with the risk grade factor value.</description>
        <label>Risk Grade Factor</label>
        <referenceTo>LLC_BI__Risk_Grade_Factor__c</referenceTo>
        <relationshipLabel>Risk Grade Factor Values</relationshipLabel>
        <relationshipName>Risk_Grade_Factor_Values</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Risk_Grade_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is currently not being used</description>
        <label>Risk Grade Template</label>
        <referenceTo>LLC_BI__Risk_Grade_Template__c</referenceTo>
        <relationshipLabel>Risk Grade Factor Values</relationshipLabel>
        <relationshipName>Risk_Grade_Factor_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Risk Grade Factor Value</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk Grade Factor Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Risk Grade Factor Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>